<resources>
    <string name="app_name">App</string>
    <string name="no_account">Do not have account? <b>Register here</b> </string>
    <string name="col1">Number</string>
    <string name="col2">For Help</string>
    <string name="row1">999</string>
    <string name="row1num">Police,fire service and ambulance services </string>
    <string name="row2">333</string>
    <string name="row2num">Various government services</string>
    <string name="row3">109</string>
    <string name="row3num">Women and children are abused</string>
    <string name="row4">106</string>
    <string name="row4num">Dudok helpine</string>
    <string name="row5">1090</string>
    <string name="row5num">Disaster warning in service</string>
    <string name="row6">100</string>
    <string name="row6num">Bangladesh police helpdesk </string>
    <string name="row7">101</string>
    <string name="row7num">RAB helpdesk</string>
    <string name="row8">102</string>
    <string name="row8num">Fire service hotline</string>
    <string name="row9">105</string>
    <string name="row9num">National identity card</string>
    <string name="row10">16430</string>
    <string name="row10num">Government legal assistance</string>
    <string name="emergency">Emergency Number</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_la_meridan">LaMeridan</string>
    <string name="title_activity_doreen_hotel">DoreenHotel</string>
    <string name="title_activity_six_seasons_hotel">SixSeasonsHotel</string>
    <string name="title_activity_radisson_blue">RadissonBlue</string>
    <string name="title_activity_pam_pacific_sonargong">PamPacificSonargong</string>
    <string name="title_activity_square">Square</string>
    <string name="title_activity_pg">PG</string>
    <string name="title_activity_ever_care">EverCare</string>
    <string name="title_activity_dhaka_medical">DhakaMedical</string>
    <string name="title_activity_united">United</string>
    <string name="title_activity_ahsan_manzil">AhsanManzil</string>
    <string name="title_activity_sonargaon">Sonargaon</string>
    <string name="title_activity_lalbag_fort">LalbagFort</string>
    <string name="title_activity_shahid_miner">ShahidMiner</string>
    <string name="title_activity_dhakashwari">Dhakashwari</string>
    <string name="title_activity_bashudara_city">BashudaraCity</string>
    <string name="title_activity_jamuna">Jamuna</string>
    <string name="title_activity_new_market">NewMarket</string>
    <string name="title_activity_shimanto">Shimanto</string>
    <string name="title_activity_police_plaza">PolicePlaza</string>
    <string name="title_activity_shahjalar">Shahjalar</string>
    <string name="title_activity_hatirjil_police">hatirjilPolice</string>
    <string name="title_activity_sher_bangla_police">sherBanglaPolice</string>
    <string name="title_activity_tourist_police">touristPolice</string>
    <string name="title_activity_acpolice">ACPolice</string>
    <string name="title_activity_aamnat">Aamnat</string>
    <string name="title_activity_memon_marternity">MemonMarternity</string>
    <string name="title_activity_royal_hos">RoyalHos</string>
    <string name="title_activity_dental_college">DentalCollege</string>
    <string name="title_activity_loins_eye">LoinsEye</string>
    <string name="title_activity_delta_health">DeltaHealth</string>
    <string name="title_activity_peninsula">Peninsula</string>
    <string name="title_activity_agrabad">Agrabad</string>
    <string name="title_activity_radisson_bay">RadissonBay</string>
    <string name="title_activity_orchid">Orchid</string>
    <string name="title_activity_avenue">Avenue</string>
    <string name="title_activity_patenga">Patenga</string>
    <string name="title_activity_chandrath">Chandrath</string>
    <string name="title_activity_khoiyachara">Khoiyachara</string>
    <string name="title_activity_sitakunda">Sitakunda</string>
    <string name="title_activity_ethico">ethico</string>
    <string name="title_activity_kotwali">Kotwali</string>
    <string name="title_activity_epz">EPZ</string>
    <string name="title_activity_chwakbazar">Chwakbazar</string>
    <string name="title_activity_akbar_shah">AkbarShah</string>
    <string name="title_activity_bayazid">Bayazid</string>
    <string name="title_activity_afmi">Afmi</string>
    <string name="title_activity_ameen">Ameen</string>
    <string name="title_activity_central_shop">CentralShop</string>
    <string name="title_activity_finlay">Finlay</string>
    <string name="title_activity_lucky">Lucky</string>
    <string name="title_activity_osmani">Osmani</string>
    <string name="title_activity_shohir">Shohir</string>
    <string name="title_activity_goldem_tower">GoldemTower</string>
    <string name="title_activity_moyeen">Moyeen</string>
    <string name="title_activity_new_shamoli">NewShamoli</string>
    <string name="title_activity_eshop">Eshop</string>
    <string name="title_activity_rose">Rose</string>
    <string name="title_activity_norjahan">Norjahan</string>
    <string name="title_activity_mira">Mira</string>
    <string name="title_activity_bottomhill">Bottomhill</string>
    <string name="title_activity_sultan">Sultan</string>
    <string name="title_activity_holy_dental">HolyDental</string>
    <string name="title_activity_jalarbad">Jalarbad</string>
    <string name="title_activity_ibn_sina">IbnSina</string>
    <string name="title_activity_mother_care">MotherCare</string>
    <string name="title_activity_shisu">Shisu</string>
    <string name="title_activity_bisnakandi">Bisnakandi</string>
    <string name="title_activity_jaflong">Jaflong</string>
    <string name="title_activity_ratargul">Ratargul</string>
    <string name="title_activity_dargah">Dargah</string>
    <string name="title_activity_lalakhal">Lalakhal</string>
    <string name="title_activity_kotwali_police">KotwaliPolice</string>
    <string name="title_activity_range_dig">RangeDIG</string>
    <string name="title_activity_superintendent">Superintendent</string>
    <string name="title_activity_shylet_police">ShyletPolice</string>
    <string name="title_activity_shylet_rab">ShyletRAB</string>
    <string name="title_activity_coxbazar">Coxbazar</string>
    <string name="title_activity_khan_jahan_ali">KhanJahanAli</string>
    <string name="title_activity_city_inn">CityInn</string>
    <string name="title_activity_castle_salam">CastleSalam</string>
    <string name="title_activity_royal_intra">RoyalIntra</string>
    <string name="title_activity_western_inn">WesternInn</string>
    <string name="title_activity_hotel_city_inn">HotelCityInn</string>
    <string name="title_activity_apollo">Apollo</string>
    <string name="title_activity_ali">Ali</string>
    <string name="title_activity_al_faruk">AlFaruk</string>
    <string name="title_activity_auro_diagnostic">AuroDiagnostic</string>
    <string name="title_activity_basundhara_diagnostic">BasundharaDiagnostic</string>
    <string name="title_activity_railway_police">RailwayPolice</string>
    <string name="title_activity_kdig">KDIG</string>
    <string name="title_activity_ship_yeard">ShipYeard</string>
    <string name="title_activity_digholia">Digholia</string>
    <string name="title_activity_industrial_police">IndustrialPolice</string>
    <string name="title_activity_sundaebans">Sundaebans</string>
    <string name="title_activity_gallamari">Gallamari</string>
    <string name="title_activity_senhati">Senhati</string>
    <string name="title_activity_bakultala">Bakultala</string>
    <string name="title_activity_rupsha_khan">RupshaKhan</string>
    <string name="title_activity_kshopping">Kshopping</string>
    <string name="title_activity_joili">Joili</string>
    <string name="title_activity_khulna_new_market">KhulnaNewMarket</string>
    <string name="title_activity_sm">SM</string>
    <string name="title_activity_life_style">LifeStyle</string>

</resources>